commit all res exept uav

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
   <ul>
-    <li><a href="./partials/IevgResume.html">IevgResume</a></li>
-    <li><a href="./partials/ievgRes_2.html">IevgResume v2</a></li>
+    <!-- <li><a href="./partials/IevgResume.html">IevgResume</a></li> -->
+    <!-- <li><a href="./partials/ievgRes_2.html">IevgResume v2</a></li> -->
     <li><a href="./partials/UAV-Resume-en.html">UAV-Resume-en</a></li>
-    <li><a href="./partials/UAV-Resume-ukr.html">UAV-Resume-ukr</a></li>
+    <!-- <li><a href="./partials/UAV-Resume-ukr.html">UAV-Resume-ukr</a></li> -->
 
-    <li><a href="./partials/NataResume.html">NataResume</a></li>
-    <li><a href="./partials/NataRes_2.html">NataRes_2</a></li>
+    <!-- <li><a href="./partials/NataResume.html">NataResume</a></li> -->
+    <!-- <li><a href="./partials/NataRes_2.html">NataRes_2</a></li> -->
   </ul>
 </body>
 
